# narrative-coupling-demo

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: events_break.json  events_neutral.json  profiles.json
src/narrative_coupling_demo/: __init__.py  demo.py  engine.py  models.py
