[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "narrative-coupling-demo"
version = "0.1.0"
description = "Minimal deterministic companion demo for Narrative Coupling"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
narrative-coupling-demo = "narrative_coupling_demo.demo:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
